
  ChangeLog for SPINspiral code repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
  
   160: sluys, 27/05/2009
     - added SPINspiral 'manual' (aimed at summer student using the code)
   
   159: sluys, 27/05/2009
     - fixed bug (I think) introduced at r.156 (see Viviens email of 25/05/2009)
     
   157: sluys, 21/05/2009
     - treat random injection parameters properly
     - todo: read parameter file before injection file
     
   156: sluys, 21/05/2009
     - moved code to start MCMC offset to new subroutine startMCMCOffset()
     - choice from input file respected: start at inj/best value, start from
       Gaussian around inj/best value, start uniformly from prior range
     - consistency check on input file: abort if injection value outside prior range
     
   152: sluys, 13/05/2009
     - moved files in doc/ around
   
   151: sluys, 13/05/2009
     - changed mcmc.input: added file name for system-dependent parameters
       (see doc/mcmc.input)
            
   149: sluys, 07/05/2009
     - added GNU licence stuff
   
   148: sluys, 30/04/2009
     - named the code SPINspiral
   
   147: sluys, 16/04/2009
     - fixed SNR scaling for log(d) as MCMC parameter
   
   145: sluys, 13/04/2009
     - removed printing of build info to screen: system( NULL ) seems to be 
       incompatible with condor_compile
   
   144: sluys, 13/04/2009
     - store duplicate of best parameter values (parBestVal) as injection values
       (injParVal) and prior_tc_mean in case of no SW injection
     
   140: sluys, 10/04/2009
     - removed the waveform_*.c files from the repository (still have a backup)
   
   139: sluys, 09/04/2009
     - removed two bugs:
       - mcmc_parameters.c: getInjectionParameters(): still need to pass par->mc and par->eta
       - mcmc_main.c: line~157: "Global :...": parIDs 54 and 53 are not always defined
     - added parameter headers to screen and file output